syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Identity.proto";
import "NullableGrpcDate.proto";
import "CustomerObligation.proto";

message CustomerOnSABase {
    repeated cis.types.Identity CustomerIdentifiers = 1;
    
    string FirstNameNaturalPerson = 2;
    
    string Name = 3;
    
    cis.types.NullableGrpcDate DateOfBirthNaturalPerson = 4;

    bool HasPartner = 5;

    cis.types.NullableGrpcDate LockedIncomeDateTime = 6;

    repeated CustomerObligation Obligations = 7;
}